--- a/index.html
+++ b/index.html
@@ -153,19 +153,21 @@
       ];
 
       const experienceData = [
+        // New experience added here
+        {
+          title: "Summer Internship",
+          institution: "State Bank of Pakistan",
+          duration: "2025",
+          location: "Peshawar, Pakistan",
+          details: "Worked alongside economists and HR strategists at SBP during a six-week internship focused on hiring systems, team structures, and institutional workflows. Contributed to discussions on talent acquisition and public-sector performance, gaining early exposure to how national policy is shaped from the inside. This experience sparked my long-term drive to blend data, design, and strategy for public impact."
+        },
+        // Existing experience
         {
           title: "Intern – Economic Research and Policy Analysis",
           institution: "Inter-Services Public Relations (ISPR), Ministry of Pakistan",
           duration: "January - February 2025",
           location: "Peshawar, Pakistan",
           details: "Analyzed defense versus welfare spending through a comprehensive econometric analysis using Stata and R for a key policy brief. This work identified PKR 2.5M in potential annual savings, which was subsequently adopted by the Ministry. Collaborated with a 5-member team to present these findings to senior officials, directly contributing to the decisions for KP’s 2025 welfare budget."
-        },
-        {
-          title: "Summer-Intern",
-          institution: "State Bank of Pakistan",
-          duration: "June - August 2024",
-          location: "Karachi, Pakistan",
-          details: "Contributed to a 10-week summer internship, working closely with senior economists to support critical research and data analysis projects. Engineered and deployed an internal dashboard to visually track inflation and external sector trends, which was later integrated into internal reporting. Streamlined data cleaning and analysis processes for a financial inclusion study by applying expertise in R and SQL, significantly accelerating the preparation of monthly research briefs."
         },
         {
           title: "Facilitator/Mentor",
