--- a/index.html
+++ b/index.html
@@ -88,13 +88,36 @@
       </div>
     </section>
 
-    <!-- Trainings & Publications Section -->
-    <section id="trainings" class="section-container mt-16 animate-fade-in-up">
-      <h2 class="text-3xl sm:text-4xl font-bold text-center mb-8 text-gray-900">Trainings & Publications</h2>
-      <div id="trainings-container" class="space-y-8">
-        <!-- Content will be inserted here by JavaScript -->
-      </div>
-    </section>
+ <!-- Trainings & Publications Section -->
+<section id="trainings" class="section-container mt-16 animate-fade-in-up">
+  <h2 class="text-3xl sm:text-4xl font-bold text-center mb-8 text-gray-900">
+    Trainings & Publications
+  </h2>
+  <div id="trainings-container" class="space-y-8">
+    
+    <!-- Publications -->
+    <div class="space-y-4">
+      <h3 class="text-2xl font-semibold text-gray-800">Publications</h3>
+      <ul class="list-disc list-inside space-y-2">
+        <li>
+          <a href="https://drive.google.com/file/d/1wMOiKw71_BioehZu_S1HItQviAyvdMOA/view?usp=sharing" 
+             target="_blank" 
+             class="text-blue-600 hover:underline">
+            Inflation and Economic Growth in Pakistan, 2010–2024: Threshold Evidence and Policy Implications
+          </a>
+        </li>
+        <li>
+          <a href="https://drive.google.com/file/d/1Mfd1FTtzxE8euHJfZHW6prOEXLg-bRRH/view?usp=drive_link" 
+             target="_blank" 
+             class="text-blue-600 hover:underline">
+            Impact of Population Growth on Health and Education in Pakistan
+          </a>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+</section>
 
     <!-- Leadership & Volunteering Section -->
     <section id="leadership" class="section-container mt-16 animate-fade-in-up">
@@ -390,4 +413,5 @@
   </script>
 </body>
 </html>
+
 
