--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -88,36 +88,44 @@
       </div>
     </section>
 
- <!-- Trainings & Publications Section -->
-<section id="trainings" class="section-container mt-16 animate-fade-in-up">
-  <h2 class="text-3xl sm:text-4xl font-bold text-center mb-8 text-gray-900">
-    Trainings & Publications
-  </h2>
-  <div id="trainings-container" class="space-y-8">
-    
-    <!-- Publications -->
-    <div class="space-y-4">
-      <h3 class="text-2xl font-semibold text-gray-800">Publications</h3>
-      <ul class="list-disc list-inside space-y-2">
-        <li>
-          <a href="https://drive.google.com/file/d/1wMOiKw71_BioehZu_S1HItQviAyvdMOA/view?usp=sharing" 
-             target="_blank" 
-             class="text-blue-600 hover:underline">
-            Inflation and Economic Growth in Pakistan, 2010–2024: Threshold Evidence and Policy Implications
-          </a>
-        </li>
-        <li>
-          <a href="https://drive.google.com/file/d/1Mfd1FTtzxE8euHJfZHW6prOEXLg-bRRH/view?usp=drive_link" 
-             target="_blank" 
-             class="text-blue-600 hover:underline">
-            Impact of Population Growth on Health and Education in Pakistan
-          </a>
-        </li>
+    <!-- Publications Section -->
+    <section id="publications" class="section-container mt-16 animate-fade-in-up">
+      <h2 class="text-3xl sm:text-4xl font-bold text-center mb-8 text-gray-900">Publications</h2>
+      <ul class="space-y-4 text-lg text-gray-700">
+          <li class="p-4 bg-gray-50 rounded-lg transition-transform transform hover:scale-105">
+              <a href="https://drive.google.com/file/d/1wMOiKw71_BioehZu_S1HItQviAyvdMOA/view?usp=sharing" target="_blank" class="block">
+                  <span class="font-medium hover:text-blue-600 transition-colors">
+                      Inflation and Economic Growth in Pakistan, 2010–2024: Threshold Evidence and Policy Implications
+                  </span>
+              </a>
+              <p class="text-sm italic text-gray-500 mt-2">Submitted to a peer-reviewed journal for review.</p>
+          </li>
+          <li class="p-4 bg-gray-50 rounded-lg transition-transform transform hover:scale-105">
+              <a href="https://drive.google.com/file/d/1Mfd1FTtzxE8euHJfZHW6prOEXLg-bRRH/view?usp=drive_link" target="_blank" class="block">
+                  <span class="font-medium hover:text-blue-600 transition-colors">
+                      Impact of Population Growth on Health and Education in Pakistan
+                  </span>
+              </a>
+              <p class="text-sm italic text-gray-500 mt-2">Submitted to a peer-reviewed journal for review.</p>
+          </li>
+          <li class="p-4 bg-gray-50 rounded-lg transition-transform transform hover:scale-105">
+              <a href="https://drive.google.com/file/d/1RKF9VK13-dLv5tjBGLyOjPyb1qT_FtXK/view?usp=drive_link" target="_blank" class="block">
+                <span class="font-medium hover:text-blue-600 transition-colors">
+                  17th South Asian Economics Student's Meet
+                </span>
+                <p class="text-sm italic text-gray-500 mt-1">Bacha Khan University, December 2021</p>
+              </a>
+          </li>
       </ul>
-    </div>
-
-  </div>
-</section>
+    </section>
+    
+    <!-- Trainings Section -->
+    <section id="trainings" class="section-container mt-16 animate-fade-in-up">
+      <h2 class="text-3xl sm:text-4xl font-bold text-center mb-8 text-gray-900">Trainings</h2>
+      <div id="trainings-container" class="space-y-8">
+        <!-- Content will be inserted here by JavaScript -->
+      </div>
+    </section>
 
     <!-- Leadership & Volunteering Section -->
     <section id="leadership" class="section-container mt-16 animate-fade-in-up">
@@ -176,6 +184,13 @@
           ]
         },
         {
+          title: "Diploma in Information Technology (Grade-A)",
+          institution: "Government Technical & Vocational Centre(B) Umerzai, Charsadda",
+          duration: "Feb 2023 – Feb 2024",
+          location: "Charsadda, Pakistan",
+          details: `Relevant coursework: IT fundamentals, programming, database management, and web development`
+        },
+        {
           title: "Intermediate in Pre-Engineering",
           institution: "Government Degree College Achni Payan, Peshawar",
           duration: "2019–2021",
@@ -193,7 +208,7 @@
           institution: "New Iqra High School Umarzai",
           duration: "2019",
           location: "Umarzai"
-        },
+        }
       ];
 
       const experienceData = [
@@ -201,7 +216,7 @@
         {
           title: "Summer Internship",
           institution: "State Bank of Pakistan",
-          duration: "2025",
+          duration: "January 2025 - August 2025",
           location: "Peshawar, Pakistan",
           details: "Worked alongside economists and HR strategists at SBP during a six-week internship focused on hiring systems, team structures, and institutional workflows. Contributed to discussions on talent acquisition and public-sector performance, gaining early exposure to how national policy is shaped from the inside. This experience sparked my long-term drive to blend data, design, and strategy for public impact."
         },
@@ -300,15 +315,6 @@
       ];
 
       const trainingsData = [
-        {
-          title: "17th South Asian Economics Student's Meet",
-          institution: "Bacha Khan University",
-          duration: "December 2021",
-          details: `Presented a research paper on the "Impact of Energy Crises on Pakistan's Economy" at the SAESM 17 conference, representing the university alongside a classmate. Conducted secondary data analysis to examine the effects of energy shortages on industrial production and economic growth in urban centers like Karachi and Lahore. Successfully presented the findings, demonstrating academic research, data analysis, and professional presentation skills.
-          <br><br>
-          <a href="https://drive.google.com/file/d/1RKF9VK13-dLv5tjBGLyOjPyb1qT_FtXK/view?usp=drive_link" target="_blank" class="text-blue-600 hover:underline font-medium">View Paper</a> | 
-          <a href="https://econ-owais.github.io/SAESM-Research-paper/" target="_blank" class="text-blue-600 hover:underline font-medium">View Demo</a>`
-        },
         {
           title: "Flood First Responders",
           institution: "Emergency Service Society, Bacha Khan University Charsadda",
@@ -413,5 +419,3 @@
   </script>
 </body>
 </html>
-
-
