--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -109,13 +109,13 @@
               <p class="text-sm italic text-gray-500 mt-2">Submitted to a peer-reviewed journal for review.</p>
           </li>
           <li class="p-4 bg-gray-50 rounded-lg transition-transform transform hover:scale-105">
-              <a href="https://drive.google.com/file/d/1RKF9VK13-dLv5tjBGLyOjPyb1qT_FtXK/view?usp=drive_link" target="_blank" class="block">
-                <span class="font-medium hover:text-blue-600 transition-colors">
-                  17th South Asian Economics Student's Meet
-                </span>
-                <p class="text-sm italic text-gray-500 mt-1">Bacha Khan University, December 2021</p>
-              </a>
-          </li>
+            <span class="font-medium text-gray-900">17th South Asian Economics Student's Meet</span>
+            <p class="text-sm italic text-gray-500 mt-1">Bacha Khan University, December 2021</p>
+            <div class="mt-2 space-x-4">
+                <a href="https://drive.google.com/file/d/1lCS8Jkk9-S5z87zFHiBaZeFHDHin9bne/view?usp=drive_link" target="_blank" class="text-blue-600 hover:underline font-medium">View Paper →</a>
+                <a href="https://econ-owais.github.io/SAESM-Research-paper/" target="_blank" class="text-blue-600 hover:underline font-medium">View Demo →</a>
+            </div>
+        </li>
       </ul>
     </section>
     
@@ -203,12 +203,19 @@
             "English"
           ]
         },
-        {
-          title: "Matriculation",
-          institution: "New Iqra High School Umarzai",
-          duration: "2019",
-          location: "Umarzai"
-        }
+         {
+          "title": "Matriculation",
+          "institution": "New Iqra High School Umarzai",
+          "duration": "2019",
+          "location": "Umarzai",
+          "subjects": [
+            "Mathematics",
+            "Physics",
+            "Chemistry",
+            "English"
+  ]
+}
+
       ];
 
       const experienceData = [
@@ -216,7 +223,7 @@
         {
           title: "Summer Internship",
           institution: "State Bank of Pakistan",
-          duration: "January 2025 - August 2025",
+          duration: "June 2025 - August 2025",
           location: "Peshawar, Pakistan",
           details: "Worked alongside economists and HR strategists at SBP during a six-week internship focused on hiring systems, team structures, and institutional workflows. Contributed to discussions on talent acquisition and public-sector performance, gaining early exposure to how national policy is shaped from the inside. This experience sparked my long-term drive to blend data, design, and strategy for public impact."
         },
@@ -261,7 +268,7 @@
       const academicProjectsData = [
         {
           title: "SDG Indicators Dashboard",
-          duration: "Ongoing",
+          duration: "Completed",
           details: `This dashboard tracks national progress on Sustainable Development Goals by leveraging UN and government data, providing a comprehensive and up-to-date view of key indicators.
           <br><br>
           <a href="https://econ-owais.github.io/Pakistan_SDGS-indicator-s-Dashboard/" target="_blank" class="text-blue-600 hover:underline font-medium">View Demo</a> | 
@@ -269,7 +276,7 @@
         },
         {
           title: "Flood Impact Infographic (Charsadda)",
-          duration: "Ongoing",
+          duration: "Completed",
           details: `This infographic visualizes flood-prone zones to inform infrastructure planning and academic research. The interactive map helps stakeholders quickly identify and assess areas at risk.
           <br><br>
           <a href="https://econ-owais.github.io/KPK-Flood-Impact-Infographic-/" target="_blank" class="text-blue-600 hover:underline font-medium">View Demo</a> | 
@@ -277,7 +284,7 @@
         },
         {
           title: "Healthy Diet Affordability Dashboard",
-          duration: "Ongoing",
+          duration: "Completed",
           details: `This dashboard analyzes the cost and accessibility of nutritious diets using FAO food price data. It helps users understand the economic barriers to healthy eating.
           <br><br>
           <a href="https://econ-owais.github.io/Healthy-Diet-Affordability-Dashboard/" target="_blank" class="text-blue-600 hover:underline font-medium">View Demo</a> | 
@@ -285,7 +292,7 @@
         },
         {
           title: "Development Indicators Dashboard",
-          duration: "Ongoing",
+          duration: "Completed",
           details: `Presents socio-economic trends with branded visuals for outreach and policy briefs. The dashboard offers a clear view of key development metrics.
           <br><br>
           <a href="https://econ-owais.github.io/pakistan-indicators-dashboard./" target="_blank" class="text-blue-600 hover:underline font-medium">View Demo</a> | 
