--- a/index.html
+++ b/index.html
@@ -185,5 +185,30 @@
           <button class="copy-btn" onclick="copyEmail()">Copy</button>
         </div>
         <div class="contact-info">
-          <h3>*
-
+          <h3>🔗 Social</h3>
+          <div class="social-links">
+            <a href="https://linkedin.com/in/owaisali-econ" target="_blank">LinkedIn</a>
+            <a href="https://github.com/econ-owais" target="_blank">GitHub</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Back to Top Button -->
+  <button id="backToTop" class="back-to-top" aria-label="Back to top">↑</button>
+
+  <!-- Optimized JavaScript (Inline & Fast) -->
+  <script src="portfolio-optimized.js" defer></script>
+  
+  <script>
+    // Hide loading screen when page loads
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        document.getElementById('loading').classList.add('hide');
+      }, 300);
+    });
+  </script>
+
+</body>
+</html>
